# back/src/routes/predict.routes.js
@@ -1,0 +1,10 @@
+import { Router } from "express";
+
+import predictController from "../controllers/predict.controller.js";
+import asyncHandler from "../middlewares/async-handler.middleware.js";
+
+const router = Router();
+
+router.post("/", asyncHandler(predictController.predict));
+
+export default router;
